Adding radio buttons and button

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,25 @@
 /* You can add global styles to this file, and also import other style files */
+@import "~@angular/material/prebuilt-themes/indigo-pink.css";
+
+.example-div-options {
+  text-align: center;
+}
+
+.example-radio-group {
+  display: inline-flex;
+  flex-direction: column;
+  text-align: left;
+}
+
+.example-radio-button {
+  margin: 5px;
+}
+
+.example-selected-value {
+  margin: 15px 0;
+}
+
+.example-button-row button,
+.example-button-row a {
+  margin-right: 8px;
+}
